--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
-xmonad-x86_64-linux
-xmonad.errors
-xmonad.hi
-xmonad.o
-build-x86_64-linux/
+.DS_Store
+.idea
+*.log
+tmp/
+
+dist
+dist-*
+cabal-dev
+*.o
+*.hi
+*.hie
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
+
+/xmonad-x86_64-linux
+/xmonad.errors
+/xmonadctl
