--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ dependencies:
 - directory >= 1.3 && < 1.4
 - text >= 2.0 && < 2.1
 - dbus >= 1.3 && < 1.4
+- X11 >= 1.10 && < 1.11
 
 ghc-options:
 - -Wall
@@ -42,8 +43,20 @@ library:
   source-dirs: src
 
 executables:
-  xmonad-config:
+  my-xmonad:
     main:                xmonad.hs
+    source-dirs:         .
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - xmonad-config
+    - xmonad
+    - xmonad-contrib
+    - xmonad-dbus
+  xmonadctl:
+    main:                xmonadctl.hs
     source-dirs:         .
     ghc-options:
     - -threaded
