--- a/stack.yaml
+++ b/stack.yaml
@@ -31,9 +31,6 @@ resolver:
 #   - wai
 packages:
 - .
-- xmonad
-- xmonad-contrib
-- xmonad-dbus
 
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
@@ -46,6 +43,12 @@ packages:
 #
 extra-deps:
 - hostname-1.0
+- git: https://github.com/xmonad/xmonad.git
+  commit: 1396343a58c9cd205457a5658ec18a20e91e49b1
+- git: https://github.com/xmonad/xmonad-contrib.git
+  commit: 9217ac18e94667a6ed50d06d6fa1e47b51f7e604
+- git: https://github.com/troydm/xmonad-dbus.git
+  commit: ddd5ed1a8d0e11ad61a2cf8b04b8e51227bf57cf
 
 # Override default flag values for local packages and extra-deps
 flags:
