--- a/xmonad-config.cabal
+++ b/xmonad-config.cabal
@@ -40,7 +40,7 @@ library
     , text ==2.0.*
   default-language: Haskell2010
 
-executable my-xmonad
+executable xmonad
   main-is: xmonad.hs
   other-modules:
       Paths_xmonad_config
