--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                xmonad-config
+name:                my-xmonad
 version:             0.1.0.0
-github:              "githubuser/xmonad-config"
+github:              "shanexu/.xmonad"
 license:             BSD-3-Clause
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/xmonad-config#readme>
+description:         Please see the README on GitHub at <https://github.com/shanexu/.xmonad#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -43,7 +43,7 @@ library:
   source-dirs: src
 
 executables:
-  xmonad:
+  myxmonad:
     main:                xmonad.hs
     source-dirs:         .
     ghc-options:
@@ -51,7 +51,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - xmonad-config
+    - my-xmonad
     - xmonad
     - xmonad-contrib
     - xmonad-dbus
@@ -63,7 +63,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - xmonad-config
+    - my-xmonad
     - xmonad
     - xmonad-contrib
     - xmonad-dbus
