--- a/my-xmonad.cabal
+++ b/my-xmonad.cabal
@@ -4,11 +4,11 @@ cabal-version: 2.2
 --
 -- see: https://github.com/sol/hpack
 
-name:           xmonad-config
+name:           my-xmonad
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/xmonad-config#readme>
-homepage:       https://github.com/githubuser/xmonad-config#readme
-bug-reports:    https://github.com/githubuser/xmonad-config/issues
+description:    Please see the README on GitHub at <https://github.com/shanexu/.xmonad#readme>
+homepage:       https://github.com/shanexu/.xmonad#readme
+bug-reports:    https://github.com/shanexu/.xmonad/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2024 Author name here
@@ -20,13 +20,13 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/xmonad-config
+  location: https://github.com/shanexu/.xmonad
 
 library
   other-modules:
-      Paths_xmonad_config
+      Paths_my_xmonad
   autogen-modules:
-      Paths_xmonad_config
+      Paths_my_xmonad
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
@@ -40,12 +40,12 @@ library
     , text ==2.0.*
   default-language: Haskell2010
 
-executable xmonad
+executable myxmonad
   main-is: xmonad.hs
   other-modules:
-      Paths_xmonad_config
+      Paths_my_xmonad
   autogen-modules:
-      Paths_xmonad_config
+      Paths_my_xmonad
   hs-source-dirs:
       ./
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
@@ -56,9 +56,9 @@ executable xmonad
     , dbus ==1.3.*
     , directory ==1.3.*
     , hostname >=1.0 && <2.0
+    , my-xmonad
     , text ==2.0.*
     , xmonad
-    , xmonad-config
     , xmonad-contrib
     , xmonad-dbus
   default-language: Haskell2010
@@ -66,9 +66,9 @@ executable xmonad
 executable xmonadctl
   main-is: xmonadctl.hs
   other-modules:
-      Paths_xmonad_config
+      Paths_my_xmonad
   autogen-modules:
-      Paths_xmonad_config
+      Paths_my_xmonad
   hs-source-dirs:
       ./
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
@@ -79,9 +79,9 @@ executable xmonadctl
     , dbus ==1.3.*
     , directory ==1.3.*
     , hostname >=1.0 && <2.0
+    , my-xmonad
     , text ==2.0.*
     , xmonad
-    , xmonad-config
     , xmonad-contrib
     , xmonad-dbus
   default-language: Haskell2010
