--- a/package.yaml
+++ b/package.yaml
@@ -24,9 +24,11 @@ dependencies:
 - hostname >= 1.0 && < 2.0
 - binary >= 0.8 && < 0.9
 - directory >= 1.3 && < 1.4
-- text >= 2.0 && < 2.1
+- text >= 2.1 && < 2.2
 - dbus >= 1.3 && < 1.4
 - X11 >= 1.10 && < 1.11
+- xmonad == 0.18.0
+- xmonad-contrib == 0.18.0
 
 ghc-options:
 - -Wall
