--- a/stack.yaml
+++ b/stack.yaml
@@ -17,8 +17,8 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2023-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/nightly/2024/5/31.yaml
+resolver: lts-23.19
+  # url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/nightly/2024/5/31.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
